# nlp100

./: .gitignore  README.md  pyproject.toml
chapters/: ch01.ipynb  ch02.ipynb  ch03.ipynb  ch04.ipynb  ch07.ipynb
chapters/ch05/: 40.py  41.py  42.py  43.py  44.py  45.py  46.py  47.py  48.py  49.py  ch05.ipynb
chapters/ch06/: 50.py  51.py  52.py  53.py  54.py  55.py  56.py  57.py  58.py  59.py
outputs/ch02/: result16-python.txt  result16-unix.txt  result17-python.txt  result19-unix.txt
outputs/ch03/: result23.txt  result25.txt  result26.txt  result27.txt  result28.txt  result29.txt
outputs/ch04/: result31.txt  result32.txt  result33.txt  result34.txt  result36.txt  result37.txt  result38.txt
outputs/ch05/: result40.txt  result42.txt  result43.txt  result44.txt  result45.txt  result46.txt  result47.txt  result48.txt  result49.txt
outputs/ch06/: result52.txt  result53.txt  result54.csv  result55.txt  result56.txt  result57.txt
outputs/ch07/: result60.txt  result61.txt  result63.txt  result64.txt  result65.txt  result66.txt  result67.txt  result68.txt
